[package]
name = "wmi-mev-tool"
version = "0.1.0"
authors = ["Alcibiades <alcibiades.eth@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1.0.39"
chrono = "0.4.19"
env_logger = "0.8.4"
ethers = "0.5.4"
ethers-providers = "0.5.5"
ethers-flashbots = "0.6.0"
hex = "0.4.3"
log = "0.4.14"
ron = "0.6.5"
serde = "1.0.130"
serde_json = "1.0.64"
tokio = { version = "1.6", features = ["macros", "rt-multi-thread"] }
url = "2.2.2"
